# Projekt_gesamt

./: .gitignore  README.md  main.py  main_hr_app.py  main_power_figures.py  main_streamlit_app.py  person_class.py  pyproject.toml
data/: person_db.json
source/: analyze_heartrate_data.py  ekg_data.py  find_peaks_EKG.py  functions_Leistungskurve2.py  functions_plot.py  load_data.py  load_user_data.py  object_functions_person_data.py  power_curve1.py  sort.py
