[project]
name = "Projekt_gesamt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dh823", email = "dh8239@mci4me.at"},
]
dependencies = ["numpy>=2.2.5", "pandas>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
